# chcolors

./: Cargo.toml  README.md  chcolors.py  chcolors_test.py  config.schema.json  pyproject.toml
src/: config.rs  main.rs  pattern.rs  program.rs  state.rs  theme.rs
test/examples/: config.json  state.json
