[project]
name = "chcolors"
version = "0.1.0"
description = "Script for simultaneously switching color schemes in multiple config files"
authors = [
    {name = "Mike Rivnak", email = "rivnakm1@gmail.com"}
]
urls.Repository = "https://github.com/rivnakm/chcolors"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "termcolor>=2.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "uuid>=1.30",
]
